# Sinhala-AI-Lyrics-Video-Telegram-Bot

./: .env.example  README.md  api.py  app.py  bot.py  gen.py  pyproject.toml  requirements.txt
sinhala_converter/: data_list.json
